--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-jscs": "^3.0.2",
     "gulp-jshint": "^2.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
     "gulp-scss-lint": "^0.3.8",
     "gulp-sequence": "^0.4.3",
