add context var for handlebars

--- a/tasks/config.json
+++ b/tasks/config.json
@@ -1,6 +1,7 @@
 {
 	"buildDir": "dist",
 	"handlebars": {
+		"context": "../src/templates/context.js",
 		"src": ["src/templates/views/**/*.hbs"],
 		"partials": "src/templates/partials",
 		"dest": "."
