remove extension from context required file

--- a/tasks/config.json
+++ b/tasks/config.json
@@ -1,7 +1,7 @@
 {
 	"buildDir": "dist",
 	"handlebars": {
-		"context": "../src/templates/context.js",
+		"context": "../src/templates/context",
 		"src": ["src/templates/views/**/*.hbs"],
 		"partials": "src/templates/partials",
 		"dest": "."
