--- a/tasks/config.json
+++ b/tasks/config.json
@@ -1,7 +1,7 @@
 {
 	"buildDir": "dist",
 	"handlebars": {
-		"context": "../src/templates/context",
+		"context": "src/templates/context",
 		"src": ["src/templates/views/**/*.hbs"],
 		"partials": "src/templates/partials",
 		"dest": "."
@@ -11,12 +11,9 @@
 		"dest": "images"
 	},
 	"js": {
-		"src": {
-			"files": [
+		"src": [
 				"src/js/**/*.js"
-			],
-			"minifiedLibs": []
-		},
+		],
 		"name": "all.min.js",
 		"dest": "js"
 	},
