--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: node_js
 node_js:
-- '0.10'
-before_install:
+- '4.1'
 script:
-- node ./node_modules/.bin/gulp build --release
+- npm run build --release
