--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: node_js
-node_js:
-- '4.1'
 before_install:
 - gem install scss_lint
 script:
 - npm run build --release
+node_js:
+- '4.1'
+env:
+- CXX=g++-4.8
+addons:
+apt:
+sources:
+- ubuntu-toolchain-r-test
+packages:
+- g++-4.8
