--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "gulp dev",
     "build": "gulp build --release",
+    "github_deploy": "gulp github_deploy",
     "gulp": "gulp --release"
   },
   "repository": {
@@ -27,6 +28,7 @@
     "gulp": "^3.9.0",
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-cssnano": "^2.0.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jscs": "^3.0.2",
