--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
 script:
 - npm run build --release
 after_success:
-- node run deploy
+- npm run github_deploy
 node_js:
 - '4.1'
 env:
@@ -16,3 +16,6 @@ addons:
     - ubuntu-toolchain-r-test
     packages:
     - g++-4.8
+cache:
+  directories:
+    - node_modules
