--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ before_install:
 script:
 - npm run build --release
 after_success:
+- git config --global user.name = "Travis CI"
+- git config --global user.email = "Travis-CI@unitag.io"
 - npm run github_deploy
 node_js:
 - '4.1'
