--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script:
 - npm run build --release
 after_success:
 - git config --global user.name = "Travis CI"
-- git config --global user.email = "Travis-CI@unitag.io"
+- git config --global user.email = "Travis-CI@example.com"
 - npm run github_deploy
 node_js:
 - '4.1'
