--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "gulp": "^3.9.0",
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-cssnano": "^2.0.0",
+    "gulp-eslint": "^1.1.1",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
-    "gulp-jscs": "^3.0.2",
-    "gulp-jshint": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
     "gulp-scss-lint": "^0.3.8",
@@ -38,8 +37,6 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-uncss": "^1.0.4",
-    "jshint": "^2.8.0",
-    "jshint-stylish": "^2.1.0",
     "require-dir": "^0.3.0",
     "yargs": "^3.31.0"
   }
