update es lint and improve tasks configurations

--- a/tasks/config.json
+++ b/tasks/config.json
@@ -8,6 +8,7 @@
 		"context": "src/templates/context.js",
 		"src": ["src/templates/views/**/*.hbs"],
 		"partials": "src/templates/partials",
+    "viewsDir": "src/templates/views/",
 		"dest": "."
 	},
 	"images": {
