--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,9 @@
     "browser": true
   },
 
+  "globals": {
+  },
+
   "rules": {
     "no-unexpected-multiline": 2,
     "block-scoped-var": 2,
@@ -74,7 +77,7 @@
     "eol-last": 2,
     "func-names": 2,
     "func-style": 2,
-    "indent": [2, "tab"],
+    "indent": [2, 2],
     "key-spacing": 2,
     "linebreak-style": 2,
     "new-parens": 2,
