--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.0.0",
+    "gulp-data": "^1.2.1",
     "gulp-eslint": "^1.1.1",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
+    "gulp-remove-empty-lines": "0.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
     "gulp-scss-lint": "^0.3.8",
@@ -38,6 +40,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-uncss": "^1.0.4",
+    "handlebars-intl": "^1.1.2",
     "require-dir": "^0.3.0",
     "yargs": "^3.31.0"
   }
