fix assets dest folder

--- a/tasks/config.json
+++ b/tasks/config.json
@@ -1,7 +1,7 @@
 {
-	"assets": {
+  "assets": {
 		"src": "src/assets/**/*",
-		"dest": "assets"
+		"dest": "."
 	},
 	"buildDir": "dist",
 	"handlebars": {
